add filter by date, seed user and implement filter at rbac
